# dockswitcher

./: .gitignore  AGENTS.md  PRD.md  README.md  REVIEW_GUIDE.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: release.yml
.husky/: pre-commit
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: dockutil
src-tauri/src/: dock.rs  icon.rs  lib.rs  main.rs  store.rs  tray.rs
src-tauri/src/commands/: dock.rs  mod.rs  profiles.rs  settings.rs
src/components/: ConfirmDialog.tsx  ProfileDetail.tsx  SettingsView.tsx  Sidebar.tsx  SortableAppItem.tsx  index.ts
src/components/Sidebar/: Sidebar.tsx  SortableProfileItem.tsx  index.ts  types.ts
src/hooks/: index.ts  useDock.test.ts  useDock.ts  useProfiles.test.ts  useProfiles.ts  useSettings.test.ts  useSettings.ts
src/test/: crypto.d.ts  setup.ts
src/types/: index.ts  profile.ts  settings.ts  store.ts
src/views/: ProfileView.tsx  SettingsView.tsx  index.ts  types.ts
