[package]
name = "dockswitcher"
version = "0.2.0"
description = "macOS menu bar app to switch Dock profiles"
authors = ["Rodrigo Villa"]
edition = "2021"

[lib]
name = "dockswitcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tauri-plugin-dialog = "2.6.0"
icns = "0.4"
plist = "1"
base64 = "0.22"
tauri-plugin-autostart = "2"
